feat(pt): add out-of-hosp death to the patient table (previously it was only in-hosp death)

--- a/notebooks/patient_dev.ipynb
+++ b/notebooks/patient_dev.ipynb
@@ -11,36 +11,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/wliao0504/code/clif/CLIF-MIMIC\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wliao0504/code/clif/CLIF-MIMIC/.venv/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cd .."
+    "import os\n",
+    "os.chdir(\"..\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n",
       "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n"
      ]
     }
@@ -68,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-10 15:51:25,380 - INFO - initialized logging at logs/etl.log\n"
+      "2025-09-12 22:55:35,038 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -100,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dev"
+    "# ETL"
    ]
   },
   {
@@ -1799,28 +1785,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### one patient who died twice"
+    "## death"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'death' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# one patient who died twice\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m death_test \u001b[38;5;241m=\u001b[39m \u001b[43mdeath\u001b[49m[death[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpatient_id\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m19931581\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'death' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "death_test = death[death[\"patient_id\"] == 19931581]"
+    "q = f\"\"\"\n",
+    "SELECT DISTINCT subject_id\n",
+    "    , deathtime\n",
+    "    , dischtime\n",
+    "    , count: COUNT(*) OVER (PARTITION BY subject_id)\n",
+    "FROM '{mimic_table_pathfinder(\"admissions\")}' a \n",
+    "WHERE deathtime IS NOT NULL\n",
+    "ORDER BY count DESC\n",
+    "\"\"\"\n",
+    "death_from_admissions = duckdb.query(q).df()\n",
+    "\n",
+    "q = f\"\"\"\n",
+    "FROM death_from_admissions a\n",
+    "FULL JOIN '{mimic_table_pathfinder(\"patients\")}' p USING (subject_id)\n",
+    "SELECT DISTINCT ON (patient_id) patient_id: subject_id\n",
+    "    , adm_deathtime: deathtime\n",
+    "    , pt_dod: dod\n",
+    "    , adm_dischtime: dischtime\n",
+    "    , death_dttm: COALESCE(deathtime, dod)\n",
+    "    , count: COUNT(*) OVER (PARTITION BY subject_id)\n",
+    "WHERE death_dttm IS NOT NULL\n",
+    "-- sorted ascending by death_dttm allows us to keep the first (earliest) death via DISTINCT ON\n",
+    "-- which in MIMIC-IV 3.1 is only an issue that applies to one patient (who died twice)\n",
+    "ORDER BY count DESC, death_dttm\n",
+    "\"\"\"\n",
+    "death_joined = duckdb.query(q).df()"
    ]
   },
   {
