chore: consolidate all dev notebooks to be under dev/

--- a/dev/med_admin_dev.ipynb
+++ b/dev/med_admin_dev.ipynb
@@ -2028,7 +2028,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mg_bolus = intm_only.query(\"label == 'Magnesium Sulfate (Bolus)' and duration_in_mins <= 180\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2060,8 +2069,6 @@
     }
    ],
    "source": [
-    "mg_bolus = intm_only.query(\"label == 'Magnesium Sulfate (Bolus)' and duration_in_mins <= 180\")\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Plot histogram of duration_in_mins for mg_bolus\n",
