test(meds): update the unit pytest to use the new hamilton functions and fix a timestamp flattening issue to pass the pytest

--- a/dev/med_admin_dev.ipynb
+++ b/dev/med_admin_dev.ipynb
@@ -45,23 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n",
-      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-25 13:05:19,787 - INFO - initialized logging at logs/etl.log\n",
-      "2025-10-25 13:05:19,789 - INFO - initialized logging at logs/etl.log\n"
+      "2025-10-25 14:03:53,761 - INFO - initialized logging at logs/etl.log\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n"
      ]
     },
     {
@@ -70,7 +68,7 @@
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-25 13:05:19,799 - INFO - initialized logging at logs/etl.log\n"
+      "2025-10-25 14:03:53,775 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test"
+    "# Test the hamilton pipeline"
    ]
   },
   {
@@ -2030,6 +2028,68 @@
    ],
    "source": [
     "med._test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flattening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-25 14:03:54,528 - INFO - flattening timestamps in the continuous table (from the start-end double timestamps to a single `admin_dttm`)...\n",
+      "2025-10-25 14:03:54,533 - INFO - removing duplicated timestamps that naturally occur as a result of flattening timestamps...\n",
+      "2025-10-25 14:03:54,549 - INFO - Removed 32 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load input data\n",
+    "input_path = Path('tests/fixtures/med_admin/mimic-to-clif-test-fixtures - med_admin_in.csv')\n",
+    "test_df = pd.read_csv(input_path)\n",
+    "# drop columns that start with 'Column'\n",
+    "test_df.drop(columns=[col for col in test_df.columns if col.startswith('Column')], inplace=True)\n",
+    "test_df['starttime'] = pd.to_datetime(test_df['starttime'])\n",
+    "test_df['endtime'] = pd.to_datetime(test_df['endtime'])\n",
+    "test_df['_duration_in_mins'] = (test_df['endtime'] - test_df['starttime']).dt.total_seconds()/ 60\n",
+    "test_df['med_route_name'] = 'placeholder'\n",
+    "\n",
+    "# Load expected output\n",
+    "expected_path = Path('tests/fixtures/med_admin/mimic-to-clif-test-fixtures - med_admin_out.csv')\n",
+    "expected_df = pd.read_csv(expected_path)\n",
+    "expected_df['admin_dttm'] = pd.to_datetime(expected_df['admin_dttm'], format='mixed')\n",
+    "expected_df['hospitalization_id'] = expected_df['hospitalization_id'].astype(str)\n",
+    "expected_df['med_order_id'] = expected_df['med_order_id'].astype(str)\n",
+    "\n",
+    "q = \"\"\"\n",
+    "SELECT * FROM test_df\n",
+    "\"\"\"\n",
+    "input_pr = duckdb.sql(q)\n",
+    "\n",
+    "# Run the flattening function\n",
+    "flattened = med.cont_flattened(input_pr)\n",
+    "mar_action_dedup_mapping = pd.read_csv(mapping_path_finder(\"mar_action_dedup\"))\n",
+    "\n",
+    "# Run the deduplication function\n",
+    "result_df = med.cont_deduped(flattened, mar_action_dedup_mapping).df()\n",
+    "\n",
+    "# Convert ID columns to string to match CLIF schema\n",
+    "result_df['hospitalization_id'] = result_df['hospitalization_id'].astype(str)\n",
+    "result_df['med_order_id'] = result_df['med_order_id'].astype(str)\n",
+    "\n",
+    "# Sort both dataframes to ensure order-independent comparison\n",
+    "sort_cols = ['hospitalization_id', 'med_order_id', 'med_category', 'admin_dttm', 'med_dose']\n",
+    "result_df = result_df.sort_values(by=sort_cols).reset_index(drop=True)\n",
+    "expected_df = expected_df.sort_values(by=sort_cols).reset_index(drop=True)"
    ]
   },
   {
