chore: misc updates in dev notebooks

--- a/dev/med_admin_dev.ipynb
+++ b/dev/med_admin_dev.ipynb
@@ -45,30 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-10-25 14:03:53,761 - INFO - initialized logging at logs/etl.log\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-10-25 14:03:53,775 - INFO - initialized logging at logs/etl.log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "setup_logging()\n",
     "\n",
@@ -160,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,6 +2068,70 @@
     "sort_cols = ['hospitalization_id', 'med_order_id', 'med_category', 'admin_dttm', 'med_dose']\n",
     "result_df = result_df.sort_values(by=sort_cols).reset_index(drop=True)\n",
     "expected_df = expected_df.sort_values(by=sort_cols).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Missing med_category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌────────────────────┬──────────────┬────────────────────────┬──────────────┬──────────────────────────┬─────────────────┬─────────────────────┬───────────┬───────────────┬─────────────────────────────┬───────────────────────────────────────────────────────────────────────────────────────┬────────────────────┐\n",
+       "│ hospitalization_id │ med_order_id │        med_name        │ med_category │        admin_dttm        │ mar_action_name │ mar_action_category │ med_dose  │ med_dose_unit │          med_group          │                                    med_route_name                                     │ med_route_category │\n",
+       "│      varchar       │   varchar    │        varchar         │   varchar    │ timestamp with time zone │     varchar     │       varchar       │   float   │    varchar    │           varchar           │                                        varchar                                        │      varchar       │\n",
+       "├────────────────────┼──────────────┼────────────────────────┼──────────────┼──────────────────────────┼─────────────────┼─────────────────────┼───────────┼───────────────┼─────────────────────────────┼───────────────────────────────────────────────────────────────────────────────────────┼────────────────────┤\n",
+       "│ 27920476           │ 2979896      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-11 02:45:00-05   │ [Started]       │ start               │ 6.0023303 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 2979896      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-11 12:31:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 3660629      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-11 12:31:00-05   │ [Started]       │ start               │ 6.0013614 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 3660629      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-11 18:40:00-05   │ Stopped         │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 4462461      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-10 12:00:00-05   │ [Started]       │ start               │ 2.0004537 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 4462461      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-10 16:30:00-05   │ ChangeDose/Rate │ dose_change         │ 4.0009074 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 4462461      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-10 22:16:00-05   │ ChangeDose/Rate │ dose_change         │  6.010284 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 27920476           │ 4462461      │ Epoprostenol (Veletri) │ epoprostenol │ 2133-04-11 02:45:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 13462        │ Epoprostenol (Veletri) │ epoprostenol │ 2114-05-29 02:14:00-05   │ [Started]       │ start               │ 42.004738 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 13462        │ Epoprostenol (Veletri) │ epoprostenol │ 2114-05-29 08:02:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│    ·               │   ·          │           ·            │      ·       │           ·              │     ·           │  ·                  │        ·  │     ·         │              ·              │                                           ·                                           │ ·                  │\n",
+       "│    ·               │   ·          │           ·            │      ·       │           ·              │     ·           │  ·                  │        ·  │     ·         │              ·              │                                           ·                                           │ ·                  │\n",
+       "│    ·               │   ·          │           ·            │      ·       │           ·              │     ·           │  ·                  │        ·  │     ·         │              ·              │                                           ·                                           │ ·                  │\n",
+       "│ 24784126           │ 9897080      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-06-05 12:33:00-05   │ [Started]       │ start               │ 41.998646 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9897080      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-06-05 18:20:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9926756      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-04-23 03:40:00-05   │ [Started]       │ start               │ 42.004738 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9926756      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-04-23 09:28:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9942478      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-04-25 02:00:00-05   │ [Started]       │ start               │ 42.004738 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9942478      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-04-25 07:48:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9943668      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-04-28 16:27:00-05   │ [Started]       │ start               │ 42.028988 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9943668      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-04-28 22:12:00-05   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9970258      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-02-25 21:32:00-06   │ [Started]       │ start               │  42.38007 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "│ 24784126           │ 9970258      │ Epoprostenol (Veletri) │ epoprostenol │ 2114-02-26 09:06:00-06   │ FinishedRunning │ stop                │       0.0 │ ng/kg/min     │ pulmonary vasodilators (IV) │ 01-Drips; 02-Fluids (Crystalloids); Main order parameter; Continuous Med; Medications │ iv                 │\n",
+       "├────────────────────┴──────────────┴────────────────────────┴──────────────┴──────────────────────────┴─────────────────┴─────────────────────┴───────────┴───────────────┴─────────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────┴────────────────────┤\n",
+       "│ 1858 rows (20 shown)                                                                                                                                                                                                                                                                                     12 columns │\n",
+       "└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.utils import clif_table_pathfinder\n",
+    "\n",
+    "\n",
+    "q = f\"\"\"\n",
+    "FROM '{clif_table_pathfinder('medication_admin_continuous')}'\n",
+    "SELECT *\n",
+    "WHERE med_category in ('epoprostenol')\n",
+    "\"\"\"\n",
+    "duckdb.sql(q)"
    ]
   },
   {
