--- a/dev/patient_dev.ipynb
+++ b/dev/patient_dev.ipynb
@@ -21,16 +21,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n",
-      "loaded configuration from /Users/wliao0504/code/clif/CLIF-MIMIC/src/../config/config.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# src/tables/patient.py\n",
     "import numpy as np\n",
@@ -49,15 +40,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-09-12 22:55:35,038 - INFO - initialized logging at logs/etl.log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "setup_logging()\n",
     "\n",
@@ -2192,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2232,34 +2215,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18433744</td>\n",
-       "      <td>HISPANIC/LATINO - SALVADORAN</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>HISPANIC/LATINO - SALVADORAN</td>\n",
-       "      <td>Hispanic</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>Spanish</td>\n",
-       "      <td>Spanish</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>18433796</td>\n",
-       "      <td>WHITE - RUSSIAN</td>\n",
-       "      <td>White</td>\n",
-       "      <td>WHITE - RUSSIAN</td>\n",
-       "      <td>Non-Hispanic</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>English</td>\n",
-       "      <td>English</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>18433806</td>\n",
        "      <td>BLACK/AFRICAN AMERICAN</td>\n",
        "      <td>Black or African American</td>\n",
@@ -2268,27 +2223,27 @@
        "      <td>M</td>\n",
        "      <td>Male</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2164-06-04 05:00:00+00:00</td>\n",
        "      <td>English</td>\n",
        "      <td>English</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18433819</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>White</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>Non-Hispanic</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>1</th>\n",
+       "      <td>18434318</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Female</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2154-03-13 19:45:00+00:00</td>\n",
        "      <td>English</td>\n",
        "      <td>English</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>18433862</td>\n",
+       "      <th>2</th>\n",
+       "      <td>18434727</td>\n",
        "      <td>WHITE</td>\n",
        "      <td>White</td>\n",
        "      <td>WHITE</td>\n",
@@ -2296,7 +2251,35 @@
        "      <td>F</td>\n",
        "      <td>Female</td>\n",
        "      <td>NaT</td>\n",
+       "      <td>2119-03-27 01:46:00+00:00</td>\n",
+       "      <td>English</td>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18435037</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>White</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>Non-Hispanic</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Female</td>\n",
        "      <td>NaT</td>\n",
+       "      <td>2155-06-05 05:00:00+00:00</td>\n",
+       "      <td>English</td>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18435084</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>White</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>Non-Hispanic</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2121-10-15 05:00:00+00:00</td>\n",
        "      <td>English</td>\n",
        "      <td>English</td>\n",
        "    </tr>\n",
@@ -2305,29 +2288,29 @@
        "</div>"
       ],
       "text/plain": [
-       "  patient_id                     race_name              race_category  \\\n",
-       "0   18433744  HISPANIC/LATINO - SALVADORAN                      Other   \n",
-       "1   18433796               WHITE - RUSSIAN                      White   \n",
-       "2   18433806        BLACK/AFRICAN AMERICAN  Black or African American   \n",
-       "3   18433819                         WHITE                      White   \n",
-       "4   18433862                         WHITE                      White   \n",
+       "  patient_id               race_name              race_category  \\\n",
+       "0   18433806  BLACK/AFRICAN AMERICAN  Black or African American   \n",
+       "1   18434318                 UNKNOWN                    Unknown   \n",
+       "2   18434727                   WHITE                      White   \n",
+       "3   18435037                   WHITE                      White   \n",
+       "4   18435084                   WHITE                      White   \n",
        "\n",
-       "                 ethnicity_name ethnicity_category sex_name sex_category  \\\n",
-       "0  HISPANIC/LATINO - SALVADORAN           Hispanic        M         Male   \n",
-       "1               WHITE - RUSSIAN       Non-Hispanic        F       Female   \n",
-       "2        BLACK/AFRICAN AMERICAN       Non-Hispanic        M         Male   \n",
-       "3                         WHITE       Non-Hispanic        M         Male   \n",
-       "4                         WHITE       Non-Hispanic        F       Female   \n",
+       "           ethnicity_name ethnicity_category sex_name sex_category birth_date  \\\n",
+       "0  BLACK/AFRICAN AMERICAN       Non-Hispanic        M         Male        NaT   \n",
+       "1                 UNKNOWN            Unknown        F       Female        NaT   \n",
+       "2                   WHITE       Non-Hispanic        F       Female        NaT   \n",
+       "3                   WHITE       Non-Hispanic        F       Female        NaT   \n",
+       "4                   WHITE       Non-Hispanic        M         Male        NaT   \n",
        "\n",
-       "  birth_date death_dttm language_name language_category  \n",
-       "0        NaT        NaT       Spanish           Spanish  \n",
-       "1        NaT        NaT       English           English  \n",
-       "2        NaT        NaT       English           English  \n",
-       "3        NaT        NaT       English           English  \n",
-       "4        NaT        NaT       English           English  "
+       "                 death_dttm language_name language_category  \n",
+       "0 2164-06-04 05:00:00+00:00       English           English  \n",
+       "1 2154-03-13 19:45:00+00:00       English           English  \n",
+       "2 2119-03-27 01:46:00+00:00       English           English  \n",
+       "3 2155-06-05 05:00:00+00:00       English           English  \n",
+       "4 2121-10-15 05:00:00+00:00       English           English  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2335,6 +2318,122 @@
    "source": [
     "clif_patient = read_from_rclif(\"patient\")\n",
     "clif_patient.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "race_name                                  race_category                            \n",
+       "NaN                                        Unknown                                      141175\n",
+       "WHITE                                      White                                        139117\n",
+       "BLACK/AFRICAN AMERICAN                     Black or African American                     23552\n",
+       "UNKNOWN                                    Unknown                                        9630\n",
+       "OTHER                                      Other                                          8754\n",
+       "WHITE - OTHER EUROPEAN                     White                                          5964\n",
+       "ASIAN                                      Asian                                          4253\n",
+       "HISPANIC/LATINO - PUERTO RICAN             Other                                          3706\n",
+       "ASIAN - CHINESE                            Asian                                          3480\n",
+       "HISPANIC OR LATINO                         Other                                          3047\n",
+       "UNABLE TO OBTAIN                           Unknown                                        2460\n",
+       "HISPANIC/LATINO - DOMINICAN                Other                                          2459\n",
+       "BLACK/CAPE VERDEAN                         Black or African American                      2349\n",
+       "WHITE - RUSSIAN                            White                                          2161\n",
+       "BLACK/CARIBBEAN ISLAND                     Black or African American                      1552\n",
+       "BLACK/AFRICAN                              Black or African American                      1499\n",
+       "PATIENT DECLINED TO ANSWER                 Unknown                                        1024\n",
+       "ASIAN - SOUTH EAST ASIAN                   Asian                                           843\n",
+       "ASIAN - ASIAN INDIAN                       Asian                                           818\n",
+       "HISPANIC/LATINO - GUATEMALAN               Other                                           763\n",
+       "WHITE - EASTERN EUROPEAN                   White                                           742\n",
+       "WHITE - BRAZILIAN                          White                                           724\n",
+       "PORTUGUESE                                 White                                           708\n",
+       "HISPANIC/LATINO - SALVADORAN               Other                                           568\n",
+       "AMERICAN INDIAN/ALASKA NATIVE              American Indian or Alaska Native                484\n",
+       "HISPANIC/LATINO - MEXICAN                  Other                                           462\n",
+       "HISPANIC/LATINO - COLUMBIAN                Other                                           415\n",
+       "SOUTH AMERICAN                             Other                                           345\n",
+       "ASIAN - KOREAN                             Asian                                           338\n",
+       "HISPANIC/LATINO - HONDURAN                 Other                                           276\n",
+       "NATIVE HAWAIIAN OR OTHER PACIFIC ISLANDER  Native Hawaiian or Other Pacific Islander       259\n",
+       "MULTIPLE RACE/ETHNICITY                    Other                                           246\n",
+       "HISPANIC/LATINO - CUBAN                    Other                                           229\n",
+       "HISPANIC/LATINO - CENTRAL AMERICAN         Other                                           225\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clif_patient.value_counts(\n",
+    "    [\"race_name\", \"race_category\"],\n",
+    "    dropna = False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ethnicity_name                             ethnicity_category\n",
+       "NaN                                        Unknown               141175\n",
+       "WHITE                                      Non-Hispanic          139117\n",
+       "BLACK/AFRICAN AMERICAN                     Non-Hispanic           23552\n",
+       "UNKNOWN                                    Unknown                 9630\n",
+       "OTHER                                      Unknown                 8754\n",
+       "WHITE - OTHER EUROPEAN                     Non-Hispanic            5964\n",
+       "ASIAN                                      Non-Hispanic            4253\n",
+       "HISPANIC/LATINO - PUERTO RICAN             Hispanic                3706\n",
+       "ASIAN - CHINESE                            Non-Hispanic            3480\n",
+       "HISPANIC OR LATINO                         Hispanic                3047\n",
+       "UNABLE TO OBTAIN                           Unknown                 2460\n",
+       "HISPANIC/LATINO - DOMINICAN                Hispanic                2459\n",
+       "BLACK/CAPE VERDEAN                         Non-Hispanic            2349\n",
+       "WHITE - RUSSIAN                            Non-Hispanic            2161\n",
+       "BLACK/CARIBBEAN ISLAND                     Non-Hispanic            1552\n",
+       "BLACK/AFRICAN                              Non-Hispanic            1499\n",
+       "PATIENT DECLINED TO ANSWER                 Unknown                 1024\n",
+       "ASIAN - SOUTH EAST ASIAN                   Non-Hispanic             843\n",
+       "ASIAN - ASIAN INDIAN                       Non-Hispanic             818\n",
+       "HISPANIC/LATINO - GUATEMALAN               Hispanic                 763\n",
+       "WHITE - EASTERN EUROPEAN                   Non-Hispanic             742\n",
+       "WHITE - BRAZILIAN                          Non-Hispanic             724\n",
+       "PORTUGUESE                                 Non-Hispanic             708\n",
+       "HISPANIC/LATINO - SALVADORAN               Hispanic                 568\n",
+       "AMERICAN INDIAN/ALASKA NATIVE              Non-Hispanic             484\n",
+       "HISPANIC/LATINO - MEXICAN                  Hispanic                 462\n",
+       "HISPANIC/LATINO - COLUMBIAN                Hispanic                 415\n",
+       "SOUTH AMERICAN                             Unknown                  345\n",
+       "ASIAN - KOREAN                             Non-Hispanic             338\n",
+       "HISPANIC/LATINO - HONDURAN                 Hispanic                 276\n",
+       "NATIVE HAWAIIAN OR OTHER PACIFIC ISLANDER  Non-Hispanic             259\n",
+       "MULTIPLE RACE/ETHNICITY                    Unknown                  246\n",
+       "HISPANIC/LATINO - CUBAN                    Hispanic                 229\n",
+       "HISPANIC/LATINO - CENTRAL AMERICAN         Hispanic                 225\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clif_patient.value_counts(\n",
+    "    [\"ethnicity_name\", \"ethnicity_category\"],\n",
+    "    dropna = False\n",
+    "    )"
    ]
   },
   {
